test/tests/compiler/8_loops/invalid_semantics/extra_credit/duplicate_case_in_labeled_switch.plx
pub fn main(none) i32 {
    #  make sure our validation of switch statements also traverses labeled
    #  statements
    a: i32 = 0
    label label
    match a {
        -> 1 {
            -> 1 {
                break
            }
        }
    }
    return false
}
